--- a/src/app.pcss
+++ b/src/app.pcss
@@ -67,7 +67,18 @@
 		--ring: hsl(212.7, 26.8%, 83.9);
 	}
 }
+@layer utilities {
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
 
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+}
 @layer base {
 	* {
 		@apply border-border;
