--- a/src/app.pcss
+++ b/src/app.pcss
@@ -86,4 +86,16 @@
 	body {
 		@apply bg-background text-foreground;
 	}
+
+	.breadcrumb-item {
+		@apply font-poppins text-sm;
+	}
+
+	.breadcrumb-item:hover {
+		@apply text-primary-main-blue underline;
+	}
+
+	.breadcrumb-item .active {
+		@apply text-primary-main-blue;
+	}
 }
